WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312186
REGRESSION(
306364@main
): [macOS] PDF text selection color becomes darker when system is in dark appearance
https://bugs.webkit.org/show_bug.cgi?id=312186
Summary
REGRESSION(306364@main): [macOS] PDF text selection color becomes darker when...
Abrar Rahman Protyasha
Reported
2026-04-13 13:31:35 PDT
rdar://174654854
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2026-04-13 13:48:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62663
EWS
Comment 2
2026-04-13 22:56:14 PDT
Committed
311173@main
(098787f88f63): <
https://commits.webkit.org/311173@main
> Reviewed commits have been landed. Closing PR #62663 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug