REGRESSION(306364@main): [macOS] PDF text selection color becomes darker when system is in dark appearance https://bugs.webkit.org/show_bug.cgi?id=312186 rdar://174654854

Reviewed by Aditya Keerthi and Megan Gardner.

In 306364@main, we added a <meta color-scheme="light dark"> element to
(main frame) plugin documents, which opted us into appearance change
adaptations. While this is generally correct, this bucks the established
behavior where text selection colors do not adapt.

In this patch, we revert the behavior change introduced in the
regressing commit for PDF text selections only by removing the relevant
style color option (UseDarkAppearance) when querying RenderStyle for the
platform selection color.

Tests: TestWebKitAPI.UnifiedPDF.SelectionHighlightColorDoesNotAdaptToColorScheme

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::paintPDFSelection):
* Tools/TestWebKitAPI/Helpers/cocoa/TestWKWebView.h:
* Tools/TestWebKitAPI/Helpers/cocoa/TestWKWebView.mm:
(-[WKWebView snapshotAfterScreenUpdates]):
(-[WKWebView snapshotAfterScreenUpdatesInRect:]):
(-[TestWKWebView sampleColorsInRect:]):
(-[TestWKWebView sampleColorsWithInterval:]):
(-[TestWKWebView sampleColorsInRect:withInterval:]):

To service the new test case, we introduce API support to sample colors
within a given rect in the web view.

* Tools/TestWebKitAPI/Tests/WebKit/WKWebView/UnifiedPDFTests.mm:
(TestWebKitAPI::UNIFIED_PDF_TEST):

Canonical link: https://commits.webkit.org/311173@main