Tools/TestWebKitAPI/Helpers/cocoa/TestWKWebView.h
@@ -211,6 +211,7 @@ class Color;
 - (void)focus;
 - (std::optional<CGPoint>)getElementMidpoint:(NSString *)selector;
 - (Vector<WebCore::Color>)sampleColors;
+- (Vector<WebCore::Color>)sampleColorsInRect:(CGRect)rect;
 - (Vector<WebCore::Color>)sampleColorsWithInterval:(unsigned)interval;
 - (RetainPtr<_WKFrameTreeNode>)frameTree;
 - (void)typeCharacter:(char)character;
